spelling corrections and additions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <main>
       <h1><img src="logo.png" alt="" width="30"> 2019 UtahJS Survey Results</h1>
-      <p>In October of 2019, a survey of UtahJS members conducted through the group's slack channel around the topics of pay and education. Presented here are an analysis of the results, as well as some commentary, and a link to the raw result data.</p>
+      <p>In October of 2019, a survey of UtahJS members was conducted through the group's slack channel around the topics of pay and education. Presented here are an analysis of the results, as well as some commentary, and a link to the raw result data.</p>
       <p>Jump To:</p>
       <ul>
         <li><a href="#demographics">Demographics</a></li>
@@ -55,16 +55,16 @@
       <p>This box plot shows similar results to previous years, with strong overlap of titles -- especially mid and senior level developers. Some observations:</p>
       <ul>
         <li>While the average for "Senior Developer" is 10 years, people are describing themselves with that label with as few as 3 years of experience.</li>
-        <li>Junior developer is the narrows band, with a range of 3 years from least to most experienced.</li>
+        <li>Junior developer is the narrowest band, with a range of 3 years from least to most experienced.</li>
       </ul>
 
-      <h3>What general experience levels for all of the survey respondants?</h3>
+      <h3>What are the experience levels for all of the survey respondents?</h3>
 
       <div id="overall-experience" class="chart"></div>
 
       <div id="overall-experience-5" class="chart"></div>
 
-      <h3>Gender of respondants...</h3>
+      <h3>Gender of respondents...</h3>
 
       <p>This year the survey asked about gender, with the option of entering their own response in free-form text.</p>
 
@@ -98,18 +98,19 @@
       <div id="gender-comparison" class="chart"></div>
 
       <h2><a name="compensation">Compensation</a></h2>
-      <p>This year, the survey included compensation questions about base bay (cash compensation), liquid equity (stock), non-recocurring bonuses, pay changes from changing employers, as well as important benefits.</p>
+      <p>This year, the survey included compensation questions about base bay (cash compensation), liquid equity (stock), non-reoccuring bonuses, pay changes from changing employers, as well as important benefits.</p>
 
       <h3>Total compensation</h3>
       <!-- <p>Survey responses included several students, or people otherwise not earning (or reporting) their income. In this section, those responses will not be included in statistical analysis exept in the first section. Meaning the sum of base cash pay (aka salary), liquid equity, and bonuses across all experience levels is:</p> -->
 
       <div id="total-comp-with-nones" class="chart"></div>
+      <p>Two box plots are shown here: one including responses with zero compensation (students, out of work, taking time off), and one including those with jobs currently.</p>
 
       <h3>How does total compensation change with experience?</h3>
       <div id="total-comp-by-experience" class="chart full"></div>
 
       <h3>Of those that received equity or bonuses, what were they?</h3>
-      <p>78 of 208 respondants reported receiving equity or a bonus.</p>
+      <p>78 of 208 respondents reported receiving equity or a bonus.</p>
 
       <div id="received-non-cash" class="chart"></div>
       <div id="non-cash-comp" class="chart"></div>
@@ -130,7 +131,7 @@
       <div id="comp-by-title" class="chart"></div>
       <h2><a name="education">Education</a></h2>
       <h3>What is the distribution of education types?</h3>
-      <p>Survey respondants selected from a pre-defined list of types of education, or "other" with free-form text</p>
+      <p>Survey respondents selected from a pre-defined list of types of education, or "other" with free-form text</p>
       <div id="edu-type" class="chart"></div>
       <p>Other responses inlcuded different certificate programs, high-school only, and mixture of some college & bootcamps</p>
       <h3>Do different education types have different compensation distributions?</h3>
@@ -139,7 +140,7 @@
       <div id="comp-by-edu-exp" class="chart full"></div>
       <p>Hover over "bootcamp" in the legend, and observe that the points are all clustered between 0-5 years of experience. While bootcamp graduates have a lower compensation when compared to other education types in general, they are within the same pay range as their peers at that experience level. I believe that this is explained by their years of experience in the industry -- not their education type.</p>
       <p></p>
-      <h3>What type of degrees do respondants have?</h3>
+      <h3>What type of degrees do respondents have?</h3>
       <div id="degree-type" class="chart"></div>
       <p>While Computer Science Bachelors and Masters degrees remain the largest type of degree held, as a whole, they are a minority to non-computer-science degree holders.</p>
       <h4>"Other" degrees</h4>
@@ -176,10 +177,10 @@
           <li>Supply Chain Management</li>
       </ul>
       <h2><a name="location">Location</a></h2>
-      <h3>Where do respondants live?</h3>
+      <h3>Where do respondents live?</h3>
       <div id="live-location" class="chart"></div>
 
-      <h3>Where do respondants work?</h3>
+      <h3>Where do respondents work?</h3>
       <div id="work-location" class="chart"></div>
       <p>At the risk of being a <a href="https://xkcd.com/1138/">"geographic profile map, which is basically just a population map"</a>, here are the results in tabular form</p>
 
@@ -197,11 +198,11 @@
         </tbody>
       </table>
       <h3>What about remote workers?</h3>
-      <p>4 respondants reported living remotely, meaning they live outside of Utah, but participate in UtahJS.</p>
-      <p>10 respondants reported working remotely, meaning they work outside of Utah.</p>
+      <p>4 respondents reported living remotely, meaning they live outside of Utah, but participate in UtahJS.</p>
+      <p>10 respondents reported working remotely, meaning they work outside of Utah.</p>
       <h2><a name="benefits">Benefits</a></h2>
       <h3>What are common benefits?</h3>
-      <p>Respondants were asked about other benefits they thought were particularly good. There were many responses, which were quite varied. Most common were:</p>
+      <p>Respondents were asked about other benefits they thought were particularly good. There were many responses, which were quite varied. Most common were:</p>
       <ul>
       <li>Fully-paid health insurance (aka. employer paid premiums) (46)</li>
       <li>Unlimited PTO*  (48)</li>
@@ -216,10 +217,10 @@
       <li>Gym membership reimbursement</li>
     </ul>
     <p>* <em>Jury is still out</em> if this is a benefit for the employer or the employee.</p>
-    <p>* What people concidered good varied. Most responses were between 4-6 weeks, but several were in the 3-4 month range of paid parental leave.</p>
+    <p>* What people considered "good" varied. Most responses were between 4-6 weeks, but several were in the 3-4 month range of paid parental leave.</p>
     <h2><a name="raises">Raises</a></h2>
     <h3>How many people received a raise this year?</h3>
-    <p>138 respondants reported receiving a raise this year, either at their current employer or by moving to a new employer (raise via moving jobs).</p>
+    <p>138 respondents reported receiving a raise this year, either at their current employer or by moving to a new employer (raise via moving jobs).</p>
     <div id="raise-received" class="chart"></div>
 
     <h3>How does receiving a raise at your current employer compare with moving to a new employer?</h3>
@@ -236,7 +237,7 @@
     <h2><a name="biases">Caveats & Biases</a></h2>
     <p>Some of my thoughts about this survey, and on ways this survey could be improved</p>
     <h3>Response Numbers</h3>
-    <p>There were 208 responses, out of 3000 people in the #general channel (in Slack). This is about 7% of members. For this number of respondants and population size, we could say that we have a 95% confidence level, with a margin of error of about 6%. Not the best, but not the worst either.</p>
+    <p>There were 208 responses, out of 3000 people in the #general channel (in Slack). This is about 7% of members. For this number of respondents and population size, we could say that we have a 95% confidence level, with a margin of error of about 6%. Not the best, but not the worst either.</p>
     <h3>Self-selection</h3>
     <p>Members of UtahJS self-selected into responding to the survey, and were not randomly sampled. It's not possible to know if there is a segment of UtahJS that was less or more likely to repond. I believe that there is good representation across years of experience, education types, and job titles. However, the representation of women in the survey decreased from last year. I don't know if a smaller percentage of the overall women participated in the survey this year, or perhaps the number of women who participate in UtahJS declined. In either case, the gender representation was not very diverse.</p>
     <h3>Survivorship bias</h3>
@@ -247,7 +248,7 @@
     <footer>
       <h2><a name="about">About</a></h2>
 
-      <p>The survey was open October 14-18, 2019, and data was collected from members of the UtahJS Slack channel using Google Forms. The raw data can be publicly accessed <a href="https://docs.google.com/spreadsheets/d/1bPNo0ijFE6Og-KmT_GaolH8KA2K0CIKScqi2iibzt-A/edit?usp=sharing">here in Google Sheets</a></p>
+      <p>The survey was open October 14-18, 2019, and data was collected from members of the UtahJS Slack channel using Google Forms. The raw data can be publicly accessed <a href="https://docs.google.com/spreadsheets/d/1bPNo0ijFE6Og-KmT_GaolH8KA2K0CIKScqi2iibzt-A/edit?usp=sharing" target="_blank">here in Google Sheets</a></p>
 
       <p>The survey was conducted, and this website was created by <a href="https://www.mikedoesweb.com" target="_blank">Michael Jasper</a>. Additional statistical analisys was provided by Brian Jasper.</p>
 
