responsive style, link target

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       <h3>Where do respondents work?</h3>
       <div id="work-location" class="chart"></div>
-      <p>To hopefully avoid being a <a href="https://xkcd.com/1138/">"geographic profile map, which is basically just a population map"</a>, here are the results in tabular form</p>
+      <p>To hopefully avoid being a <a href="https://xkcd.com/1138/" target="_blank">"geographic profile map, which is basically just a population map"</a>, here are the results in tabular form</p>
 
       <table>
         <thead>
