fixed chart axis, added description

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <p>78 of 208 respondents reported receiving equity or a bonus.</p>
 
       <div id="received-non-cash" class="chart"></div>
+      <p>Of those that did receive equity or a cash bonus, what was it?</p>
       <div id="non-cash-comp" class="chart"></div>
 
       <h3>How does gender relate to compensation?</h3>
