fixed axis lables, added chart features

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li>Apache Helicotor (1)</li>
       </ul>
 
-      <p><em>Editorial note: Several survey responses were, I'm guessing, made in jest. However, with such a sensitive issue as gender identity, I don't believe it would be right to remove or modify any response. They are included above, and I hope it doesn't in any way invalidate or delegitimize the serious and personal "other" responses to this survey.</em></p>
+      <p><em>Editorial note: Several survey responses were, I'm guessing, made in jest. However, with such a sensitive issue as gender identity, I don't think it would be right to remove or modify any response. They are included above, and I hope it doesn't in any way invalidate or delegitimize the serious and personal "other" responses to this survey.</em></p>
 
       <h3>Gender comparison to 2018</h3>
 
