--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
 
       <h3>How does job title relate to compensation?</h3>
       <div id="comp-by-title" class="chart"></div>
+      <h3>What is the shape of compensation growth over time?</h3>
+      <p>Compensation growth over a career usually described along the lines of "lots of growth in the first few years, then it slows down once you reach the local market ceiling." I'd like to propose a different word to describe the shape of compensation growth: Logarithmic.</p>
+      <p>Usually, a logarithmic scale is applied to the Y axis when visuallizing a large range of values with high growth. We can, also however apply a logarithmic scale to the X axis (time in this case) to see how compensation growth appears to be linear when visuallized this way:</p>
+      <div id="log-growth" class="chart full"></div>
+      <p>It is my observation that the strongest predictive variable in compensation seems to be a log function of years of experience, followed by (in no particular order) the industry type, technology/specialization, negotiating skills, and of course, an individuals relative talent.</p>
+      <h3>Is compensation increasing from year-to-year?</h3>
+      <p>Previous year surveys only asked about base salary, so we are comparing that metric below (not total compensation including equity or bonuses)</p>
+      <div id="comp-comp-by-year" class="chart full"></div>
+      <p>Tip: Hover over the year labels in the legend to see isolated year data</p>
       <h2><a name="education">Education</a></h2>
       <h3>What is the distribution of education types?</h3>
       <p>Survey respondents selected from a pre-defined list of types of education, or "other" with free-form text</p>
