--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
       <h3>Is compensation increasing from year-to-year?</h3>
       <p>Previous year surveys only asked about base salary, so we are comparing that metric below (not total compensation including equity or bonuses)</p>
       <div id="comp-comp-by-year" class="chart full"></div>
-      <p>Tip: Hover over the year labels in the legend to see isolated year data</p>
+      <p>Tip: Hover over the year labels in the legend to see isolated year data.</p>
+      <ul>
+        <li>The responses between 2018 and 2019 do not wildly differ. This makes sense as you may not see a change in only 1 years time with the sample size that we have</li>
+        <li>Select 2017 and observe that there are no points where a 2017 salary is the hightest in it's respective experience range. </li>
+      </ul>
       <h2><a name="education">Education</a></h2>
       <h3>What is the distribution of education types?</h3>
       <p>Survey respondents selected from a pre-defined list of types of education, or "other" with free-form text</p>
