--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <p>The survey was open October 14-18, 2019, and data was collected from members of the UtahJS Slack channel using Google Forms. The raw data can be publicly accessed <a href="https://docs.google.com/spreadsheets/d/1bPNo0ijFE6Og-KmT_GaolH8KA2K0CIKScqi2iibzt-A/edit?usp=sharing" target="_blank">here in Google Sheets</a></p>
 
-      <p>The survey was conducted, and this website was created by <a href="https://www.mikedoesweb.com" target="_blank">Michael Jasper</a>. Additional statistical analisys was provided by Brian Jasper.</p>
+      <p>The survey was conducted, and this website was created by <a href="https://www.mikedoesweb.com" target="_blank">Michael Jasper</a>. Additional statistical analysis was provided by Brian Jasper.</p>
 
       <h2>License and Copyright</h2>
 
