gender and education comments

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li>Apache Helicotor (1)</li>
       </ul>
 
-      <p><em>Editorial note: Several survey responses were, I'm guessing, made in jest. However, with such a sensitive issue as gender identity, I don't think it would be right to remove or modify any response. They are included above, and I hope it doesn't in any way invalidate or delegitimize the serious and personal "other" responses to this survey.</em></p>
+      <p><em>Editorial note: There were a few survey responses that I'm guessing were trying to make a joke, or some kind of statement about gender with their responses? Gender identity is such a sensitive and personal issue, that this sort of behavior puts me in an uncomfortable position of either 1) removing or changing someones gender identity response ("They survey editor deleted my gender preference!" I can hear them saying), or 2) including non-serious responses next to legitimate and personal "other" responses. I've chosen to include them, and it's my hope that their inclusion doesn't diminish or invalide any of the other serious responses.</em></p>
 
       <h3>Gender comparison to 2018</h3>
 
@@ -152,7 +152,8 @@
       <div id="comp-by-edu" class="chart"></div>
       <h3>Could compensation distribution differences be explained by experience, rather than education type?</h3>
       <div id="comp-by-edu-exp" class="chart full"></div>
-      <p>Hover over "bootcamp" in the legend, and observe that the points are all clustered between 0-5 years of experience. While bootcamp graduates have a lower compensation when compared to other education types in general, they are within the same pay range as their peers at that experience level. I believe that this is explained by their years of experience in the industry -- not their education type.</p>
+      <p>Hover over "bootcamp" in the legend, and observe that the points are all clustered between 0-5 years of experience. While bootcamp graduates have a lower compensation when compared to other education types in general, they are within the same pay range as their peers at that experience level (0-5 years).</p>
+      <p>Similarly, the Graduate Degree responses have the highest average salary, but observe that they are mostly in the 5-15 years experience range. While there is some overlap with the other categories, I don't know if there is enough data to definitely say education type is a strong variable in total compensation.</p>
       <p></p>
       <h3>What type of degrees do respondents have?</h3>
       <div id="degree-type" class="chart"></div>
