--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <li>Apache Helicotor (1)</li>
       </ul>
 
-      <p><em>Editorial note: There were a few survey responses that I'm guessing were trying to make a joke, or some kind of statement about gender with their responses? Gender identity is such a sensitive and personal issue, that this sort of behavior puts me in an uncomfortable position of either 1) removing or changing someones gender identity response ("They survey editor deleted my gender preference!" I can hear them saying), or 2) including non-serious responses next to legitimate and personal "other" responses. I've chosen to include them, and it's my hope that their inclusion doesn't diminish or invalide any of the other serious responses.</em></p>
+      <p><em>Editorial note: There were a few survey responses that I'm guessing were trying to make a joke, or some kind of statement about gender with their responses? Gender identity is such a sensitive and personal issue, that this sort of behavior puts me in an uncomfortable position of either 1) removing or changing someones gender identity response ("They survey editor deleted my gender preference!" I can hear them saying), or 2) including non-serious responses next to legitimate and personal "other" responses. I've chosen to include them, and it's my hope that their inclusion doesn't diminish or invalidate any of the other serious responses.</em></p>
 
       <h3>Gender comparison to 2018</h3>
 
