--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div id="gender-comparison" class="chart"></div>
 
       <h2><a name="compensation">Compensation</a></h2>
-      <p>This year, the survey included compensation questions about base bay (cash compensation), liquid equity (stock), non-reoccuring bonuses, pay changes from changing employers, as well as important benefits.</p>
+      <p>This year, the survey included compensation questions about base pay (cash compensation), liquid equity (stock), non-reoccuring bonuses, pay changes from changing employers, as well as important benefits.</p>
 
       <h3>Total compensation</h3>
 
