--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div id="gender-comparison" class="chart"></div>
 
       <h2><a name="compensation">Compensation</a></h2>
-      <p>This year, the survey included compensation questions about base pay (cash compensation), liquid equity (stock), non-reoccuring bonuses, pay changes from changing employers, as well as important benefits.</p>
+      <p>This year, the survey included compensation questions about base pay (cash compensation), liquid equity (stock), non-reoccurring bonuses, pay changes from changing employers, as well as important benefits.</p>
 
       <h3>Total compensation</h3>
 
@@ -139,7 +139,7 @@
       <p>Tip: Hover over the year labels in the legend to see isolated year data.</p>
       <ul>
         <li>The responses between 2018 and 2019 do not wildly differ. This makes sense as you may not see a change in only 1 years time with the sample size that we have</li>
-        <li>Select 2017 and observe that there are no points where a 2017 salary is the hightest in it's respective experience range. </li>
+        <li>Select 2017 and observe that there are no points where a 2017 salary is the highest in it's respective experience range. </li>
       </ul>
       <h2><a name="education">Education</a></h2>
       <h3>What is the distribution of education types?</h3>
